--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>fantastico!</h1>
-<p>en hier ook graag wat veranderen</p>
+<p>en hier ook graag wat veranderen en nog wat meer</p>
 </body>
 </html>
